# simple-python-cicd

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.aws/: task-definition.json
.github/workflows/: docker.yml
app/: main.py
infrastructure/: ecs-setup.sh
tests/: test_main.py
